--- a/src/main/resources/static/templates/pages/runs/index.html
+++ b/src/main/resources/static/templates/pages/runs/index.html
@@ -1,4 +1,4 @@
-<div id="page-wrapper" class="runs-wrapper">
+<div class="runs-wrapper" ng-controller="runController">
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">Runs</h1>
