--- a/src/main/resources/static/templates/pages/runs/index.html
+++ b/src/main/resources/static/templates/pages/runs/index.html
@@ -44,9 +44,9 @@
                             <td>{{run.host}}</td>
                             <td>{{run.user}}</td>
                             <td>{{run.server}}</td>
-                            <td>{{run.started | date : "medium" : "+11"}}</td>
-                            <td>{{run.ended | date : "medium" : "+11"}}</td>
-                            <td>{{run.totalHits}}</td>
+                            <td>{{run.started | date : "medium" : 'dd MM yyyy HH:mm:ss Z'}}</td>
+                            <td>{{run.ended | date : "medium" : 'dd MM yyyy HH:mm:ss Z'}}</td>
+                            <td>{{run.criticalHits + run.highHits + run.mediumHits + run.lowHits}}</td>
                             <td><button class="pull-center btn btn-danger" type="button" title="Delete"
                                         ng-click="deleteRun(run)">
                                 <span class="glyphicon glyphicon-trash"></span>
