--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -9,3 +9,32 @@
 .my-custom-stars .star-button.star-off .material-icons {
     color: #ddd;
 }
+
+.red {
+    color : #d43f3a;
+}
+
+.orange {
+    color : orange;
+}
+
+.yellow {
+    color : #FDE16D;
+}
+
+.blue {
+    color : #66afe9;
+}
+
+/*.nav-tabs-thin { border-bottom: 2px solid #DDD; }*/
+/*.nav-tabs-thin > li.active > a, .nav-tabs-thin > li.active > a:focus, .nav-tabs-thin > li.active > a:hover { border-width: 0; }*/
+/*.nav-tabs-thin > li > a { border: none; color: #666; }*/
+/*.nav-tabs-thin > li.active > a, .nav-tabs-thin > li > a:hover { border: none; color: #4285F4 !important; background: transparent; }*/
+/*.nav-tabs-thin > li > a::after { content: ""; background: #4285F4; height: 2px; position: absolute; width: 100%; left: 0px; bottom: -1px; transition: all 250ms ease 0s; transform: scale(0); }*/
+/*.nav-tabs-thin > li.active > a::after, .nav-tabs-thin > li:hover > a::after { transform: scale(1); }*/
+/*.tab-nav-thin > li > a::after { background: #21527d none repeat scroll 0% 0%; color: #fff; }*/
+/*.tab-pane-thin { padding: 15px 0; }*/
+/*.tab-content-thin{padding:20px}*/
+
+/*.card {background: #FFF none repeat scroll 0% 0%; box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3); margin-bottom: 30px; }*/
+/*body{ background: #EDECEC; padding:50px}*/
