--- a/src/main/resources/static/templates/pages/lints/index.html
+++ b/src/main/resources/static/templates/pages/lints/index.html
@@ -14,8 +14,8 @@
                      Kitchen Sink
                  </div> -->
             <!-- /.panel-heading -->
-            <div class="list-group">
-                <a href class="list-group-item"  ng-repeat="(name, date) in mediumLints">
+            <div class="list-group table">
+                <a href class="list-group-item"  ng-repeat="(key, value) in sortedLints">
                     <lint-info></lint-info>
                 </a>
             </div>
