--- a/src/main/resources/static/templates/directives/lint-info.html
+++ b/src/main/resources/static/templates/directives/lint-info.html
@@ -1,13 +1,20 @@
-<div class="lint" >
-    <div class="row">
-        <span class="objectName">{{name}}</span>
+<div>
+    <div class="row objectName">
+        <div class="col-md-4">
+            <span>{{key}}</span>
+        </div>
     </div>
-    <!--<div class="row" ng-repeat="detail in value">-->
-        <!--<div class="col-md-4">-->
-            <!--<span class="message">{{detail.message}}</span>-->
-        <!--</div>-->
-        <!--<div class="col-md-5">-->
-            <!--<span class="value">{{detail.value}}</span>-->
-        <!--</div>-->
-    <!--</div>-->
+    <div class="row lint" ng-repeat="detail in value">
+        <div class="col-md-1">
+            <span ng-show="value[$index-1].message != detail.message"
+                  ng-class="detail.severity === 'critical' ? 'red fa fa-circle-o' : (detail.severity === 'high' ? 'orange fa fa-circle-o' : (detail.severity === 'medium' ? 'yellow fa fa-circle-o' : 'blue fa fa-circle-o'))"></span>
+        </div>
+        <div class="col-md-4">
+            <span class="message" ng-show="value[$index-1].message != detail.message">{{detail.message}}</span>
+        </div>
+
+        <div class="col-md-5">
+            <span class="value">{{detail.value}}</span>
+        </div>
+    </div>
 </div>
