--- a/src/main/resources/static/templates/pages/runs/show.html
+++ b/src/main/resources/static/templates/pages/runs/show.html
@@ -39,8 +39,8 @@
                         <div class="tab-pane fade in active" id="current">
 
                             <!-- Nav tabs -->
-                            <div>
-                                <ul class="nav nav-pills">
+                            <div class="flatTabs">
+                                <ul class="nav nav-tabs">
                                     <li class="active">
                                         <a href="/runs/{{selectedRun.uuid}}/#dashboard" data-toggle="tab">DashBoard</a>
                                     </li>
