--- a/src/main/resources/static/templates/pages/runs/index.html
+++ b/src/main/resources/static/templates/pages/runs/index.html
@@ -8,11 +8,7 @@
 
     <!-- /.row -->
     <div class="row">
-        <div class="col-lg-10">
-            <!-- <div class="panel panel-default">
-                 <div class="panel-heading">
-                     Kitchen Sink
-                 </div> -->
+        <div class="col-lg-11">
             <!-- /.panel-heading -->
             <div class="panel-body">
                 <div class="table-responsive">
@@ -33,12 +29,12 @@
                         </thead>
                         <tbody>
                         <tr ng-repeat="run in runs" ng-click="showInfo(run)">
-                            <td>{{run.uuid}}</td>
+                            <td>{{ run.uuid | limitTo: 20 }}{{run.uuid.length > 20 ? '...' : ''}}</td>
                             <td>
-                                <button type="button" ng-show="run.status == 'PENDING'" class="btn btn-info" >{{run.status}}</button>
-                                <button type="button" ng-show="run.status == 'SUCCESS'" class="btn btn-success" >{{run.status}}</button>
-                                <button type="button" ng-show="run.status == 'RUNNING'" class="btn btn-warning" >{{run.status}}</button>
-                                <button type="button" ng-show="run.status == 'FAILURE'" class="btn btn-danger" >{{run.status}}</button>
+                                <button type="button" ng-class="{'btn btn-success' : run.status == 'SUCCESS',
+                                'btn btn-danger' : run.status == 'FAILURE',
+                                'btn btn-warning' : run.status == 'RUNNING',
+                                'btn btn-info' : run.status == 'PENDING' }">{{run.status}}</button>
                             </td>
                             <td>{{run.jdbcUrl}}</td>
                             <td>{{run.host}}</td>
