--- a/src/main/resources/static/templates/directives/lint-info.html
+++ b/src/main/resources/static/templates/directives/lint-info.html
@@ -1,20 +1,21 @@
 <div>
     <div class="row objectName">
-        <div class="col-md-4">
+        <div class="col-sm-4 col-md-4">
             <span>{{key}}</span>
         </div>
     </div>
     <div class="row lint" ng-repeat="detail in value">
-        <div class="col-sm-1">
-            <span ng-show="value[$index-1].message != detail.message"
-                  ng-class="detail.severity === 'critical' ? 'red fa fa-circle' : (detail.severity === 'high' ? 'orange fa fa-circle' : (detail.severity === 'medium' ? 'yellow fa fa-circle' : 'blue fa fa-circle'))"></span>
-        </div>
-        <div class="col-md-5">
+        <div class="col-sm-5 col-md-5">
             <span class="message" ng-show="value[$index-1].message != detail.message">{{detail.message}}</span>
         </div>
-
-        <div class="col-md-5">
+        <div class="col-sm-1 col-md-1 severity">
+            <i ng-show="value[$index-1].message != detail.message"
+                  ng-class="detail.severity === 'critical' ? 'red fa fa-circle' : (detail.severity === 'high' ? 'orange fa fa-circle' : (detail.severity === 'medium' ? 'yellow fa fa-circle' : 'blue fa fa-circle'))">
+            </i>
+        </div>
+        <div class="col-sm-6 col-md-6">
             <span class="value">{{detail.value}}</span>
         </div>
     </div>
 </div>
+
