--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -123,6 +123,10 @@ body{
     border-bottom-color: #337ab7;
 }
 
+/*.nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover {
+    border: none;
+}*/
+
 .angular-input-stars {
     font-size: 20px;
     margin-top: 30px;
@@ -175,3 +179,16 @@ body{
     /*font-family: SourceCodePro-Light;*/
     /*font-size: medium;*/
 }
+
+.chart {
+    margin-top: 20px;
+}
+
+.sidebar {
+    width: 200px;
+}
+
+#page-wrapper {
+    margin: 0 0 0 200px;
+}
+
